tests/reference/asr-kwargs_03_error-a68cc46.stderr
semantic error: Function func01 doesn't have an argument named 'd'
  --> tests/errors/kwargs_03_error.py:11:5
   |
11 |     func01(arg1, d=int(8))
   |     ^^^^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
